--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -176,11 +176,11 @@ a:not([href]):not([tabindex]) {
   text-decoration: none;
 }
 
-a:not([href]):not([tabindex]):hover,
-a:not([href]):not([tabindex]):focus {
-  color: inherit;
-  text-decoration: none;
-}
+/*a:not([href]):not([tabindex]):hover,*/
+/*a:not([href]):not([tabindex]):focus {*/
+  /*color: inherit;*/
+  /*text-decoration: none;*/
+/*}*/
 
 a:not([href]):not([tabindex]):focus {
   outline: 0;
@@ -580,11 +580,11 @@ a:not([href]):not([tabindex]) {
   text-decoration: none;
 }
 
-a:not([href]):not([tabindex]):hover,
-a:not([href]):not([tabindex]):focus {
-  color: inherit;
-  text-decoration: none;
-}
+/*a:not([href]):not([tabindex]):hover,*/
+/*a:not([href]):not([tabindex]):focus {*/
+  /*color: inherit;*/
+  /*text-decoration: none;*/
+/*}*/
 
 a:not([href]):not([tabindex]):focus {
   outline: 0;
