--- a/templates/owlAgency.html.twig
+++ b/templates/owlAgency.html.twig
@@ -2,6 +2,9 @@
 
 
 
+{% block title %}Notre agence{% endblock %}
+
+
 
     {% block content %}
 
@@ -49,7 +52,7 @@
                                             <div class="card front cardFront card-member card-plain">
                                                 <div class="content"  style="margin:auto;">
                                                     <div class="avatar avatar-danger">
-                                                        <img alt="..." class="img-circle" src="../assets/img/persons/photoJoal.png" />
+                                                        <img alt="Photo de Joal marketing" class="img-circle" src="../assets/img/persons/photoJoal.png" />
                                                     </div>
                                                     <div class="description">
                                                         <h3 class="big-text">Joal</h3>
@@ -79,7 +82,7 @@
                                         <div class="card front cardFront card-member card-plain">
                                             <div class="content">
                                                 <div class="avatar avatar-danger">
-                                                    <img alt="..." class="img-circle" src="../assets/img/persons/photoEmma.jpg" />
+                                                    <img alt="Photo d'Emmanuelle design" class="img-circle" src="../assets/img/persons/photoEmma.jpg" />
                                                 </div>
                                                 <div class="description">
                                                     <h3 class="big-text">Emmanuelle</h3>
@@ -109,7 +112,7 @@
                                         <div class="card front cardFront card-member card-plain">
                                             <div class="content">
                                                 <div class="avatar avatar-danger">
-                                                    <img alt="..." class="img-circle" src="../assets/img/persons/photoSylvie.jpg" />
+                                                    <img alt="Photo de Sylvie développement" class="img-circle" src="../assets/img/persons/photoSylvie.jpg" />
                                                 </div>
                                                 <div class="description">
                                                     <h3 class="big-text">Sylvie</h3>
@@ -152,7 +155,7 @@
                         <div class="row">
                             <div class="col-md-4 col-sm-6 serviceBlock">
                                 <div class = "imgService">
-                                    <img src="../assets/img/logo4.png" class="image-header">
+                                    <img src="../assets/img/logo4.png" alt="" class="image-header">
                                 </div>
 
                                 <p style="font-size:40px">15</p>
@@ -163,7 +166,7 @@
                             <div class="col-md-4 col-sm-6 serviceBlock">
                                 <div class = "imgService">
 
-                                    <img src="../assets/img/logo5.png" class="image-header">
+                                    <img src="../assets/img/logo5.png"  alt="" class="image-header">
                                 </div>
                                 <p style="font-size:40px">8</p>
                                 <p>Sites réalisés</p>
