--- a/templates/owlHome.html.twig
+++ b/templates/owlHome.html.twig
@@ -1,6 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Accueil le hibou qui geek{% endblock %}
 
+    {% block stylesheets2 %}
+        <meta name="description" content ="L’Agence Le Hibou qui Geek est une agence digitale spécialisée dans l’accessibilité. Elle propose la création et l’optimisation de sites vitrine ou e-commerce, la construction de votre stratégie Webmarketing, ou encore, le développement d’une identité visuelle. ">
+    {% endblock %}
     {% block logo %}
 
     <div class="headSection homeHead">
@@ -11,7 +15,7 @@
                 <div class="content">
 
                     <div>
-                        <img alt="..." src="../assets/img/logoHome.png"/>
+                        <img alt="" src="../assets/img/logoHome.png"/>
                     </div>
 
                  </div>
@@ -34,7 +38,7 @@
         </div>
 
         <div class="text-center">
-            <a class="btn btn-fill btn-owl" href={{ path('owlContactDisplay')}}#quoteAnchor>
+            <a aria-label="Lien vers la demande de devis" class="btn btn-fill btn-owl" href={{ path('owlContactDisplay')}}#quoteAnchor>
                 Parlez-nous de notre projet
             </a>
         </div>
@@ -52,8 +56,6 @@
                 <div style="text-align:center">
 
                     <p id="cardText">
-
-
                     </p>
 
                 </div>
@@ -69,10 +71,10 @@
                                         <div class="flip col-center-block" id={{ card }}>
                                             <div class="gameCard">
                                                 <div class="face front">
-                                                    <img style = "border-radius:15px; " src="../assets/img/backgroundCard.png" class="gameImg img-responsive">
+                                                    <img alt="" style = "border-radius:15px; " src="../assets/img/backgroundCard.png" class="gameImg img-responsive">
                                                 </div>
                                                 <div class="face back">
-                                                    <img style = "border-radius:15px;"  class="gameImg img-responsive" src={{"../assets/img/"~ card|slice(1) ~".png"}} >
+                                                    <img alt="" style = "border-radius:15px;"  class="gameImg img-responsive" src={{"../assets/img/"~ card|slice(1) ~".png"}} >
                                                 </div>
                                             </div>
                                         </div>
@@ -91,12 +93,12 @@
                         <!-- end team -->
                         <div class="col-md-8 col-md-offset-2 text-center" style="height:60px;">
                             <div class="col-md-6 text-center">
-                                <a class="btn btn-fill btn-owl"  href={{ path('owlContactDisplay')}}#contactAnchor>
+                                <a aria-label="Lien vers la demande de contact" class="btn btn-fill btn-owl"  href={{ path('owlContactDisplay')}}#contactAnchor>
                                     Je prends rendez-vous
                                 </a>
                             </div>
                             <div class="col-md-6 text-center">
-                                <a class="btn btn-fill btn-owl" href={{ path('owlContactDisplay')}}#quoteAnchor>
+                                <a  aria-label="Lien vers la demande de devis" class="btn btn-fill btn-owl" href={{ path('owlContactDisplay')}}#quoteAnchor>
                                     Nous en dire plus
                                 </a>
                             </div>
@@ -110,7 +112,7 @@
         </div>
 
 
-    <div class="beigeBlock section section-card-blog" style="padding-bottom:0;">
+    <div class="beigeBlock section section-card-blog" style="padding-bottom:70px;">
         <div class="container">
             <div class="title-area">
                 <h2>Nos dernières actualités</h2>
@@ -119,12 +121,12 @@
             <div class="row">
                 <div class="col-md-6" style="padding: 0 50px 0 50px;">
                     <div class="card card-blog">
-                        <a href="blog-posts.html" class="header">
-                            <img src="../assets/img/persons/web4y.jpg" class="image-header">
+                        <a aria-label="Lien vers la page de l'article" href="blog-posts.html" class="header">
+                            <img alt="" src="../assets/img/persons/web4y.jpg" class="image-header">
 
                         </a>
                         <div class="content"  style="background-color:#F9E9BE; padding: 25px 25px 0 25px;">
-                            <a href="blog-posts.html" class="card-title"><h2>We Are Here to Make Life Better</h2></a>
+                            <a aria-label="Lien vers la page de l'article"  href="blog-posts.html" class="card-title"><h2>We Are Here to Make Life Better</h2></a>
                             <p>Royère doesn't make a Polar bear bed but the Polar bear couch is my favorite piece of furniture we own The Pablo pop up was almost a pop up of influence.</p>
                         </div>
                     </div>
@@ -132,11 +134,11 @@
 
                 <div class="col-md-6" style="padding: 0 50px 0 50px;">
                     <div class="card card-blog">
-                        <a href="blog-posts.html">
-                            <img src="../assets/img/persons/web6y.jpg" href="blog-posts.html" class="image-header">
+                        <a aria-label="Lien vers la page de l'article"  href="blog-posts.html">
+                            <img alt="" src="../assets/img/persons/web6y.jpg" href="blog-posts.html" class="image-header">
                         </a>
-                        <div class="content"  style="background-color:#F9E9BE; padding: 25px 25px 0 25px;"">
-                            <a href="blog-posts.html" class="card-title"><h2>We Are Here to Make Life Better</h2></a>
+                        <div class="content"  style="background-color:#F9E9BE; padding: 25px 25px 0 25px;">
+                            <a aria-label="Lien vers la page de l'article"  href="blog-posts.html" class="card-title"><h2>We Are Here to Make Life Better</h2></a>
                             <p>Royère doesn't make a Polar bear bed but the Polar bear couch is my favorite piece of furniture we own The Pablo pop up was almost a pop up of influence.</p>
                         </div>
                     </div>
@@ -151,6 +153,7 @@
             {#</div>#}
 
         </div>
+    </div>
     {#</div>#}
 
     <div class="blueBlock section" style="padding-top:50px;">
@@ -172,66 +175,39 @@
 
                             <div class="card1-body ">
 
-                                {{ form_start(formNL, {'attr': {'class': 'form-group'}} ) }}
+                                <div id="mc_embed_signup">
 
-                                <div>
-                                    {{ form_widget(formNL.name, {'attr': {'required': true, 'class' : 'form-control'}}) }}
-                                    {{ form_errors(formNL.name) }}
+                                    <form action="https://helvie.us19.list-manage.com/subscribe/post?u=6ec326037cb371ea154dace87&amp;id=86e90caefa"
+                                          method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class=" form-group validate" target="_blank" novalidate>
+                                        <div id="mc_embed_signup_scroll">
+
+                                            <div class="mc-field-group">
+                                                <label for="mce-FNAME">Nom </label>
+                                                <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME">
+                                            </div>
+
+                                            <div class="mc-field-group">
+                                                <label for="mce-EMAIL">Email<span class="asterisk">*</span>
+                                                </label>
+                                                <input  type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
+                                            </div>
+
+                                            <div id="mce-responses" class="clear">
+                                                <div class="response" id="mce-error-response" style="background-color:yellow;display:none"></div>
+                                                <div class="response" id="mce-success-response" style="display:none"></div>
+                                            </div>
+
+                                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6ec326037cb371ea154dace87_86e90caefa" tabindex="-1" value=""></div>
+                                            <div class="clear" style="display:none"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+
+                                        </div>
+
+                                    </form>
                                 </div>
 
-                                <div>
-                                    {{ form_widget(formNL.email, {'attr': {'required': true, 'class' : 'form-control'}}) }}
-                                    {{ form_errors(formNL.email) }}
-                                </div>
-
-
-
-                                <div style="display:none;">
-                                    <div>
-                                        {{ form_widget(formNL.phone, {'attr': {'required': false, 'style':'display:none', 'class' : 'form-control'}}) }}
-                                    </div>
-
-                                    <div>
-                                        {{ form_row(formNL.quoteRequest, {'attr': {'required': false, 'class' : 'form-control'}}) }}
-                                    </div>
-
-                                    <div>
-                                        {{ form_row(formNL.newsletterRequest, {'attr': {'required': false, 'class' : 'form-control'}}) }}
-                                    </div>
-
-                                    <div>
-                                        {{ form_row(formNL.informationsRequest, {'attr': {'required': false, 'class' : 'form-control'}}) }}
-                                    </div>
-
-                                    <div>
-                                        {{ form_row(formNL.archived, {'attr': {'required': false, 'class' : 'form-control'}}) }}
-                                    </div>
-
-                                    <div>
-                                        {{ form_row(formNL.lastAction, {'attr': {'required': false, 'class' : 'form-control'}}) }}
-                                    </div>
-
-                                    <div>
-                                        {{ form_row(formNL.lastActionDate, {'attr': {'required': false, 'class' : 'form-control'}}) }}
-                                    </div>
-
-                                    <div>
-                                        {{ form_row(formNL.nextAction, {'attr': {'required': false, 'class' : 'form-control'}}) }}
-                                    </div>
-
-                                    <div>
-                                        {{ form_row(formNL.nextActionDate, {'attr': {'required': false, 'class' : 'form-control '}}) }}
-                                    </div>
-
-                                    <div>
-                                        {{ form_row(formNL.information, {'attr': {'required': false, 'class' : 'form-control '}}) }}
-                                    </div>
-                                </div>
                                 <div class="card1-footer ">
-                                    {{ form_row(formNL.save, {'attr': {'class' : 'form-control btn btn-fill btn-rose'},'label': "Je m’inscris"}) }}
+                                    <button aria-label="Validation inscription à la newsletter" id="falseButton" class="form-control btn btn-fill btn-rose">Je m'inscris</button>
                                 </div>
-
-                                {{ form_end(formNL) }}
 
 
                             </div>
@@ -242,45 +218,6 @@
                     </div>
                 </div>
             </div>
-
-
-            {#<div class="formBlock">#}
-                {#<div class="col-lg-6 col-md-6 col-sm-8 col-xs-10 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-1">#}
-                    {#<div class="card1 ">#}
-                        {#<div class="card1-header card1-header-rose card1-header-icon">#}
-                            {#<div class="card1-icon">#}
-                                {#<i class="material-icons" style="color:#113441">mail_outline</i>#}
-                            {#</div>#}
-                            {#<!--<h4 class="card1-title">Stacked Form</h4>-->#}
-                        {#</div>#}
-                        {#<div class="card1-body ">#}
-                            {#<form method="#" action="#">#}
-                                {#<div class="form-group">#}
-                                    {#<label for="name" class="bmd-label-floating">Nom et prénom ou société</label>#}
-                                    {#<input type="text" class="form-control" id="exampleEmail">#}
-                                {#</div>#}
-                                {#<div class="form-group">#}
-                                    {#<label for="email" class="bmd-label-floating">Adresse mail</label>#}
-                                    {#<input type="email" class="form-control" id="examplePass">#}
-                                {#</div>#}
-                                {#<div class="form-check">#}
-                                    {#<label class="form-check-label">#}
-                                        {#<input class="form-check-input" type="checkbox" value=""> S'inscrire à la newsletter#}
-                                        {#<span class="form-check-sign">#}
-                                            {#<span class="check">#}
-                                            {#</span>#}
-                                        {#</span>#}
-                                    {#</label>#}
-                                {#</div>#}
-                            {#</form>#}
-                        {#</div>#}
-                        {#<div class="card1-footer ">#}
-                            {#<button type="submit" class="btn btn-fill btn-rose">S'inscrire</button>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-
         </div>
     </div>
 
@@ -290,7 +227,51 @@
 
     {{ parent() }}
 
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'>
+    </script>
+    <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
+
     <script>
+
+        $("#falseButton").on("click",function(){
+            nameNL = $("#mce-FNAME").val();
+            mailNL = $("#mce-EMAIL").val();
+            owlPropectNLRegistred(nameNL, mailNL);
+            $("#mc-embedded-subscribe").trigger("click");
+
+        });
+
+
+
+        function owlPropectNLRegistred(nameNL, mailNL) {
+            console.log(nameNL +" - "+ mailNL)
+            jQuery.ajax({
+                url: "owlPropectNLRegistred",
+                type: "POST",
+                data:
+                    {
+
+                        nameNL: nameNL,
+                        mailNL: mailNL,
+                    },
+                dataType: 'json',
+
+                // Retourne les tableaux :actCategory, actSubcategory, activity, actLocation et regAdhClass
+
+                success: function (response) {
+
+                    console.log(response);
+                },
+
+                error: function () {
+                    dataResponse = [];
+                    console.log("raté!");
+                }
+
+            });
+        }
+
 
         var cardId1 = "";
         var cardId2 = "";
@@ -354,7 +335,8 @@
 
         });
 
+</script>
 
-    </script>
+
 
 {% endblock %}
